fix: images on cards are distorted

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -75,6 +75,7 @@
   -moz-border-radius: 6px;
   -ms-border-radius: 6px;
   -o-border-radius: 6px;
+  object-fit: cover;
 }
 
 .moviesCard-button_remove {
